<?xml version="1.0" encoding="utf-8"?><!--
  ~     Copyright (C) 2024 Akane Foundation
  ~
  ~     Gramophone is free software: you can redistribute it and/or modify
  ~     it under the terms of the GNU General Public License as published by
  ~     the Free Software Foundation, either version 3 of the License, or
  ~     (at your option) any later version.
  ~
  ~     Gramophone is distributed in the hope that it will be useful,
  ~     but WITHOUT ANY WARRANTY; without even the implied warranty of
  ~     MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
  ~     GNU General Public License for more details.
  ~
  ~     You should have received a copy of the GNU General Public License
  ~     along with this program.  If not, see <https://www.gnu.org/licenses/>.
  -->

<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <PreferenceCategory
        android:layout="@layout/preference_category_md"
        android:title="@string/preference_category_quality">

        <SwitchPreferenceCompat
            android:defaultValue="false"
            android:key="floatoutput"
            android:layout="@layout/preference_switch"
            android:summary="@string/settings_float_output_summary"
            android:title="@string/settings_float_output"
            android:widgetLayout="@layout/preference_switch_widget"
            app:iconSpaceReserved="false" />

        <SwitchPreferenceCompat
            android:defaultValue="true"
            android:key="ps_hardware_acc"
            android:layout="@layout/preference_switch"
            android:summary="@string/settings_hardware_acceleration_summary"
            android:title="@string/settings_hardware_acceleration"
            android:widgetLayout="@layout/preference_switch_widget"
            app:iconSpaceReserved="false" />

    </PreferenceCategory>

    <PreferenceCategory
        android:layout="@layout/preference_category_md"
        android:title="@string/settings_category_usb_audio">

        <SwitchPreferenceCompat
            android:defaultValue="false"
            android:key="dac_bypass"
            android:layout="@layout/preference_switch"
            android:summary="@string/settings_dac_bypass_summary"
            android:title="@string/settings_dac_bypass"
            android:widgetLayout="@layout/preference_switch_widget"
            app:iconSpaceReserved="false" />

        <SwitchPreferenceCompat
            android:defaultValue="false"
            android:key="usb_exclusive_access"
            android:layout="@layout/preference_switch"
            android:summary="@string/settings_usb_exclusive_access_summary"
            android:title="@string/settings_usb_exclusive_access"
            android:widgetLayout="@layout/preference_switch_widget"
            app:iconSpaceReserved="false" />

        <DropDownPreference
            android:defaultValue="0"
            android:entries="@array/usb_fixed_output_entries"
            android:entryValues="@array/usb_fixed_output_values"
            android:key="usb_fixed_output"
            android:layout="@layout/preference_dropdown_md"
            android:summary="@string/settings_usb_fixed_output_summary"
            android:title="@string/settings_usb_fixed_output"
            app:iconSpaceReserved="false"
            app:useSimpleSummaryProvider="true" />

        <DropDownPreference
            android:defaultValue="0"
            android:entries="@array/usb_volume_mode_entries"
            android:entryValues="@array/usb_volume_mode_values"
            android:key="usb_volume_mode"
            android:layout="@layout/preference_dropdown_md"
            android:summary="@string/settings_usb_volume_mode_summary"
            android:title="@string/settings_usb_volume_mode"
            app:iconSpaceReserved="false"
            app:useSimpleSummaryProvider="true" />

    </PreferenceCategory>

    <PreferenceCategory
        android:layout="@layout/preference_category_md"
        android:title="@string/settings_category_equalizer">

        <SwitchPreferenceCompat
            android:defaultValue="false"
            android:key="eq_enabled"
            android:layout="@layout/preference_switch"
            android:summary="@string/settings_eq_enabled_summary"
            android:title="@string/settings_eq_enabled"
            android:widgetLayout="@layout/preference_switch_widget"
            app:iconSpaceReserved="false" />

        <DropDownPreference
            android:defaultValue="0"
            android:entries="@array/eq_preset_entries"
            android:entryValues="@array/eq_preset_values"
            android:key="eq_preset"
            android:layout="@layout/preference_dropdown_md"
            android:summary="@string/settings_eq_preset_summary"
            android:title="@string/settings_eq_preset"
            app:iconSpaceReserved="false"
            app:useSimpleSummaryProvider="true" />

    </PreferenceCategory>

    <PreferenceCategory
        android:layout="@layout/preference_category_md"
        android:title="@string/settings_category_misc">

        <SwitchPreferenceCompat
            android:defaultValue="false"
            android:key="skip_silence"
            android:layout="@layout/preference_switch"
            android:summary="@string/settings_skip_silence_summary"
            android:title="@string/settings_skip_silence"
            android:widgetLayout="@layout/preference_switch_widget"
            app:iconSpaceReserved="false" />

    </PreferenceCategory>

</PreferenceScreen>